# BridgeTestTool

./: CMakeLists.txt  ConnToMt4.cpp  ConnToMt4.h  GenerateOrder.cpp  GenerateOrder.h  Logger.cpp  Logger.h  PriceData.cpp  PriceData.h  README.md  ReadConf.cpp  ReadConf.h  main.cpp
config/: bridgeTestTool.xml  bridgeTestTool.xml.backup
